# Pegasus-based_robot_arm_with_gesture_teleoperation

./: README.md  calculate_home.py
Servo/: sketch_jan20a.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/compressed_depth_image_transport/include/compressed_depth_image_transport/: codec.h  compressed_depth_publisher.h  compressed_depth_subscriber.h  compression_common.h
install/compressed_depth_image_transport/share/compressed_depth_image_transport/: compressed_depth_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/compressed_image_transport/include/compressed_image_transport/: compressed_publisher.h  compressed_subscriber.h  compression_common.h
install/compressed_image_transport/share/compressed_image_transport/: compressed_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cv_pegasus_bridge/lib/cv_pegasus_bridge/: cv_pegasus_bridge
install/cv_pegasus_bridge/share/cv_pegasus_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cv_pegasus_bridge/share/cv_pegasus_bridge/launch/: cv_pegasus_bridge.launch.py
install/gripper_control/lib/gripper_control/: gripper_node
install/gripper_control/share/gripper_control/: package.sh  package.xml
install/hand_interfaces/share/hand_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/handcv/lib/handcv/: handcv_node
install/handcv/share/handcv/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/image_transport_plugins/share/image_transport_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/kinect2_bridge/include/kinect2_bridge/: kinect2_definitions.h
install/kinect2_bridge/lib/kinect2_bridge/: kinect2_bridge_node
install/kinect2_bridge/share/kinect2_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/kinect2_calibration/lib/kinect2_calibration/: kinect2_calibration_node
install/kinect2_calibration/share/kinect2_calibration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/kinect2_registration/include/kinect2_registration/: kinect2_console.h  kinect2_registration.h
install/kinect2_registration/share/kinect2_registration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pegasus_control/lib/pegasus_control/: gui  headless
install/pegasus_control/share/pegasus_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/theora_image_transport/lib/theora_image_transport/: ogg_saver
scripts/: arduino_bridge_simulator.sh  debug_arduino.py  headless_commander.py  integrated_pegasus_bridge.sh  publish_joint_states.py  run_full_stack.sh  run_hand_tracking_stack.sh
scripts/GUI/: BUG_FIXES.md  EXECUTION_FLOW.md  GUI_commander.py  QUICK_START.md  README.md  joint_limits.yaml  kinect_bridge.py  verify_setup.sh
scripts/gripperSG90/GRIP/: GRIP.ino
scripts/hardwareInterface/: hardwareInterface.ino
scripts/hardwareInterface/ManualPositioning/: ManualPositioning.ino
scripts/hardwareInterface/pegasus_driver/: pegasus_driver.ino
scripts/interface/Calibration/: Calibration.ino
scripts/interface/H_interface/: H_interface.ino  web_page.h
src/cv_pegasus_bridge/: setup.cfg  setup.py
src/gripper_control/: setup.py
src/gripper_control/gripper_control/: gripper_node.py
src/handcv/: setup.py
src/kinect2_bridge/: CMakeLists.txt
src/kinect2_bridge/launch/: rtabmap.launch.py
src/kinect2_bridge/src/: kinect2_bridge.cpp
src/kinect2_calibration/src/: kinect2_calibration.cpp
src/pegasus_control/: package.xml  setup.cfg  setup.py
src/pegasus_control/pegasus_control/: headless_node.py
src/update_pegasus_description/: .setup_assistant  CMakeLists.txt
src/update_pegasus_description/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pegasus.srdf  pegasus.urdf.xacro  ros2_controllers.yaml
src/update_pegasus_description/launch/: demo.launch.py  display.launch.py  move_group.launch.py  moveit_rviz.launch.py  pegasus.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  tester.launch.py  warehouse_db.launch.py
src/update_pegasus_description/scripts/: pegasus_commander.py  planned_path_listener.py
src/update_pegasus_description/urdf/: update.urdf.xacro
(+237 files in other folders)
